<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/planetIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/planet"
        android:src="@drawable/ic_planet"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/planetIcon">

        <TextView
            android:id="@+id/planetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/planetDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/planetName"
            android:text="@string/description"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>
    </RelativeLayout>
</RelativeLayout>